--- a/HOSPITAIS/perfilHospitais.html
+++ b/HOSPITAIS/perfilHospitais.html
@@ -42,13 +42,14 @@
         <section id="donation-needs" class="tab-content">
             <h2><i class="fas fa-heart"></i> Vagas de Doação de Sangue</h2>
             <div class="vacancies">
+                <!-- Lista Resumida de Vagas será preenchida via JavaScript -->
                 <div class="vacancy-item">
                     <p><i class="fas fa-tint"></i> <strong>Tipo Sanguíneo:</strong> O+</p>
                     <p><i class="fas fa-medkit"></i> <strong>Quantidade Necessária:</strong> 5 bolsas</p>
                     <p><i class="fas fa-exclamation-triangle"></i> <strong>Urgência:</strong> Alta</p>
                 </div>
             </div>
-            <button id="addVacancyBtn" class="cta-button"><i class="fas fa-plus-circle"></i> Adicionar Necessidade</button>
+            <button id="goToManageVacanciesBtn" class="cta-button"><i class="fas fa-arrow-right"></i> Gerenciar Vagas</button>
         </section>
 
         <!-- Seção de Configurações -->
@@ -79,44 +80,6 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Salvar Alterações">
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <!-- Modal para Adicionar Vaga -->
-        <div id="addVacancyModal" class="modal" aria-hidden="true">
-            <div class="modal-content">
-                <span id="closeVacancyModalBtn" class="close" aria-label="Fechar">&times;</span>
-                <h2><i class="fas fa-plus-circle"></i> Adicionar Necessidade de Doação</h2>
-                <form id="vacancyForm">
-                    <div class="form-group">
-                        <label for="bloodType"><i class="fas fa-tint"></i> Tipo Sanguíneo:</label>
-                        <select id="bloodType" name="bloodType" required>
-                            <option value="A+">A+</option>
-                            <option value="A-">A-</option>
-                            <option value="B+">B+</option>
-                            <option value="B-">B-</option>
-                            <option value="AB+">AB+</option>
-                            <option value="AB-">AB-</option>
-                            <option value="O+">O+</option>
-                            <option value="O-">O-</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="quantity"><i class="fas fa-medkit"></i> Quantidade Necessária (bolsas):</label>
-                        <input type="number" id="quantity" name="quantity" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="urgency"><i class="fas fa-exclamation-triangle"></i> Urgência:</label>
-                        <select id="urgency" name="urgency" required>
-                            <option value="Baixa">Baixa</option>
-                            <option value="Média">Média</option>
-                            <option value="Alta">Alta</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Adicionar Necessidade">
                     </div>
                 </form>
             </div>
