interligando api hospitias

--- a/HOSPITAIS/cadastroHospitais.html
+++ b/HOSPITAIS/cadastroHospitais.html
@@ -20,7 +20,7 @@
                 <!-- Nome do Hospital -->
                 <div class="form-group">
                     <label for="hospitalName">Nome do Hospital:</label>
-                    <input type="text" id="hospitalName" name="hospitalName" placeholder="Ex: Hospital São João" required>
+                    <input type="text" id="name" name="hospitalName" placeholder="Ex: Hospital São João" required>
                     <span class="error-message" id="hospitalNameError"></span>
                 </div>
 
