--- a/HOSPITAIS/GerenciamentoVagas.html
+++ b/HOSPITAIS/GerenciamentoVagas.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento do Hospital</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Verifique se os caminhos para CSS estão corretos -->
     <link rel="stylesheet" href="cssGerenciamentoVagas/GerenciamentoVagas.css">
     <link rel="stylesheet" href="cssGerenciamentoVagas/modal.css">
+    <!-- Verifique se o caminho para o script está correto -->
     <script src="GerenciamentoVaga.js/GerenciamentoVagas.js" defer></script>
 </head>
 <body>
@@ -50,8 +52,9 @@
                 <button id="applyFiltersBtn" class="cta-button">Aplicar Filtros</button>
             </div>
             <!-- Lista de Vagas -->
-            <div class="vacancies-list">
-                <!-- Lista de Vagas será preenchida via JavaScript -->
+            <div class="vacancies-list" id="manageVacanciesList">
+                <!-- Placeholder de carregamento -->
+                <p>Carregando vagas...</p>
             </div>
             <button id="addVacancyBtn" class="cta-button">Adicionar Nova Vaga</button>
         </section>
@@ -62,6 +65,7 @@
                 <span id="closeVacancyModalBtn" class="close">&times;</span>
                 <h2>Adicionar Nova Vaga</h2>
                 <form id="addVacancyForm">
+                    <!-- Formulário de Adição -->
                     <div class="form-group">
                         <label for="bloodType">Tipo Sanguíneo:</label>
                         <select id="bloodType" name="bloodType" required>
@@ -116,14 +120,14 @@
         <section id="donationHistory" class="tab-content">
             <h2>Histórico de Vagas</h2>
             <div class="donation-history">
-                <!-- Histórico de Vagas será preenchido via JavaScript -->
+                <p>Carregando histórico de vagas...</p> <!-- Placeholder -->
             </div>
         </section>
 
         <!-- Editar Vagas -->
         <section id="editInfo" class="tab-content">
             <h2>Editar Vagas</h2>
-            <div class="vacancies-list">
+            <div class="vacancies-list" id="editVacanciesList">
                 <!-- Lista de Vagas Editáveis será preenchida via JavaScript -->
             </div>
         </section>
