problema de vags resolvido

--- a/HOSPITAIS/perfilHospitais.html
+++ b/HOSPITAIS/perfilHospitais.html
@@ -58,6 +58,8 @@
             <div class="settings-options">
                 <p>Configurações gerais de conta e preferências.</p>
             </div>
+            <button id="logoutButton">Sair</button>
+
         </section> 
 
         <!-- Modal para Edição -->
