--- a/PerfilDoador.html
+++ b/PerfilDoador.html
@@ -50,7 +50,7 @@
         <!-- Outras seções como Histórico de Doações, Pendências, etc. -->
         <!-- Essas seções não precisam de alterações imediatas, pois elas exibem dados específicos e podem ser gerenciadas separadamente -->
 
-        <a href="AcessoDoador.html">
+        <a href="PgInicial.html">
             <button class="cta-button">Voltar</button>
         </a>
     </main>
