conclusao notificaçao final

--- a/HOSPITAIS/perfilHospitais.html
+++ b/HOSPITAIS/perfilHospitais.html
@@ -55,9 +55,9 @@
         </section>
 
         <!-- Seção de Notificações do Hospital -->
-        <section id="notificationsHospitais" class="tab-content" style="display: none;">
+        <section id="notificationsHospitais" class="tab-content">
             <h2><i class="fas fa-bell"></i> Notificações</h2>
-            <div id="hospitalNotificationsList">
+            <div id="hospitalNotificationsList" class="notifications-container">
                 <p>Carregando notificações...</p>
             </div>
         </section>
